# guarantee

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy-docs.yml
docs/: .gitignore  astro.config.mjs  index.html  package-lock.json  package.json  styles.css  vocs.config.ts
docs/.astro/: settings.json
docs/pages/: architecture.mdx  encryption.mdx  getting-started.mdx  how-it-works.mdx  index.mdx  key-rotation.mdx  styles.css
docs/pages/concepts/: attestation.mdx  encryption.mdx  sealing.mdx  state.mdx
docs/pages/examples/: btc-signer.mdx  hello-tee.mdx  oracle.mdx  postgres-encrypted.mdx  redis-cache.mdx  websocket-ratls.mdx
docs/pages/sdk/: attest-macro.mdx  crypto.mdx  enclave-attestor.mdx  encrypted-derive.mdx  errors.mdx  ra-tls.mdx  sealing.mdx  state-macro.mdx
docs/src/: main.tsx
docs/src/components/: Layout.tsx
docs/src/data/: docs-content.ts
docs/src/layouts/: Layout.astro
docs/src/pages/: DocPage.tsx  Home.tsx  Verify.tsx  docs-content.ts  index.astro  verify.astro
docs/src/pages/docs/: [slug].astro  index.astro
docs/src/styles/: global.css
examples/: hello-tee.rs  postgres-encrypted.rs  websocket-ratls.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: attestation.rs  crypto.rs  errors.rs  gramine.rs  lib.rs  macros.rs  response.rs  seal.rs  types.rs
src/ra_tls/: cert.rs  client.rs  mod.rs  server.rs  verifier.rs  websocket.rs
tests/: attest_test.rs  connect_test.rs  encrypt_test.rs  ra_tls_test.rs
