[workspace]
members = [".", "macros"]
resolver = "2"

[package]
name = "guarantee"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "TEE attestation SDK for Rust — cryptographic proof that your code runs in a Trusted Execution Environment"
repository = "https://github.com/susruth/guarantee"
homepage = "https://guarantee.run"
documentation = "https://docs.rs/guarantee"
readme = "README.md"
keywords = ["tee", "sgx", "attestation", "enclave", "gramine"]
categories = ["cryptography", "web-programming"]

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
guarantee-macros = { version = "0.1.0", path = "macros" }
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"

[dev-dependencies]
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
